objects/LLC_BI__Rate__c.object
<CustomObject>
    <description>Current Rates for financial indices.</description>
    <fields>
        <fullName>LLC_BI__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active</description>
        <inlineHelpText>Active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_Value__c</fullName>
        <description>Current Value for the rate</description>
        <inlineHelpText>Current Value for the rate</inlineHelpText>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Effective_Date__c</fullName>
        <description>Effective date for the current rate.</description>
        <inlineHelpText>Effective date for the current rate.</inlineHelpText>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__External_Source__c</fullName>
        <description>URL for rate</description>
        <inlineHelpText>Please enter a URL for the rate.</inlineHelpText>
        <label>Source URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Index__c</fullName>
        <description>Index</description>
        <inlineHelpText>Index</inlineHelpText>
        <label>Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Modification_Schedule__c</fullName>
        <description>Modification Schedule</description>
        <inlineHelpText>Please enter a Modification Schedule</inlineHelpText>
        <label>Modification Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>365</fullName>
                </value>
                <value>
                    <fullName>52</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Rate</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Active__c</columns>
        <columns>LLC_BI__Index__c</columns>
        <columns>LLC_BI__Current_Value__c</columns>
        <columns>LLC_BI__Description__c</columns>
        <columns>LLC_BI__Effective_Date__c</columns>
        <columns>LLC_BI__External_Source__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>